extra margin fix

--- a/source/assets/stylesheets/components/_hero.scss
+++ b/source/assets/stylesheets/components/_hero.scss
@@ -122,7 +122,7 @@
 
 @media (max-width: 460px) {
   .hero-wrapper {
-    padding: 0 12px;
+    padding: 0 8px;
   }
 }
 
